feat(device): 增加设备绑定和解绑功能
- 在 DeviceMessageVo 和 ProductNew 模型中添加 cpuSerialNum 字段，用于记录 CPU 序列号
- 在 JsonAppDeviceController 中添加 notifyUsed 和 unbundled接口，用于绑定和解绑设备使用状态
- 在 ProductNewService 和 ProductNewServiceImpl 中实现 updateUsedStatus 和 unbundledUsedStatus 方法，处理设备绑定和解绑逻辑
- 在 ProductNewMapper 和 ProductNewMapper.xml 中添加相应的 SQL 语句，更新数据库结构和操作逻辑